<resources>
    <string name="app_name">MasterApp</string>

    <string name="button_room">Go Room</string>
    <string name="button_kitchen">Go Kitchen</string>

    <string name="temp">Temperature</string>

    <string name="label_register">Register</string>
    <string name="label_room">Room</string>

    <string name="drawer_header">Drawer Header</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="general">General</string>
    <string name="comunication">Comunication</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="create_fragment">Create Fragment</string>
    <string name="go_create">Go Create</string>

    <string name="label_regions">Regiones</string>
    <string name="id">ID</string>
    <string name="region">Region</string>
    <string name="read_json">Read Json</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login">INICIO SESIÓN</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="new_account">Crear Cuenta</string>
    <string name="question_no_account">¿No tienes una Cuenta?</string>
    <string name="sign_up">Registrarse</string>
    <string name="question_already_account">¿Ya tienes una Cuenta?</string>
    <string name="registro">REGISTRO</string>
    <string name="logout">Logout</string>
</resources>
