<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="temp"
            type="com.newforce.myapp.model.data.TemperatureData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{temp.getLocation(), default=RoomEmpty}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{temp.getStringTempCelsius(), default=Unknown}"
            android:textColor="@{temp.tempCelsius > 24 ? @color/colorAccent : @color/colorPrimaryDark}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.492" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/temp"
            android:hint="@string/app_name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/guideline_third"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <Button
            android:id="@+id/button_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRoom"
            android:text="@string/button_room"
            app:layout_constraintBottom_toTopOf="@+id/button_kitchen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_third" />

        <Button
            android:id="@+id/button_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:onClick="onClickKitchen"
            android:text="@string/button_kitchen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_room" />


        <Button
            android:id="@+id/button_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickHome"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_kitchen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
